--- a/latest/00-intro/02-options.html
+++ b/latest/00-intro/02-options.html
@@ -4,8 +4,10 @@
         <!-- Book generated using mdBook -->
         <meta charset="UTF-8">
         <title>Options - ReadStor</title>
+
+
         <!-- Custom HTML head -->
-        <meta content="text/html; charset=utf-8" http-equiv="Content-Type">
+        
         <meta name="description" content="A CLI for Apple Books annotations">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <meta name="theme-color" content="#ffffff" />
@@ -16,9 +18,11 @@
         <link rel="stylesheet" href="../css/general.css">
         <link rel="stylesheet" href="../css/chrome.css">
         <link rel="stylesheet" href="../css/print.css" media="print">
+
         <!-- Fonts -->
         <link rel="stylesheet" href="../FontAwesome/css/font-awesome.css">
         <link rel="stylesheet" href="../fonts/fonts.css">
+
         <!-- Highlight.js Stylesheets -->
         <link rel="stylesheet" href="../highlight.css">
         <link rel="stylesheet" href="../tomorrow-night.css">
@@ -26,16 +30,17 @@
 
         <!-- Custom theme stylesheets -->
         <link rel="stylesheet" href="../src/css/custom.css">
+
     </head>
     <body>
         <!-- Provide site root to javascript -->
-        <script type="text/javascript">
+        <script>
             var path_to_root = "../";
             var default_theme = window.matchMedia("(prefers-color-scheme: dark)").matches ? "ayu" : "ayu";
         </script>
 
         <!-- Work around some values being stored in localStorage wrapped in quotes -->
-        <script type="text/javascript">
+        <script>
             try {
                 var theme = localStorage.getItem('mdbook-theme');
                 var sidebar = localStorage.getItem('mdbook-sidebar');
@@ -51,7 +56,7 @@
         </script>
 
         <!-- Set the theme before any content is loaded, prevents flash -->
-        <script type="text/javascript">
+        <script>
             var theme;
             try { theme = localStorage.getItem('mdbook-theme'); } catch(e) { }
             if (theme === null || theme === undefined) { theme = default_theme; }
@@ -63,7 +68,7 @@
         </script>
 
         <!-- Hide / unhide sidebar before it is displayed -->
-        <script type="text/javascript">
+        <script>
             var html = document.querySelector('html');
             var sidebar = 'hidden';
             if (document.body.clientWidth >= 1080) {
@@ -76,7 +81,7 @@
 
         <nav id="sidebar" class="sidebar" aria-label="Table of contents">
             <div class="sidebar-scrollbox">
-                <ol class="chapter"><li class="chapter-item expanded "><a href="../00-intro/00-intro.html"><strong aria-hidden="true">1.</strong> Introduction</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="../00-intro/01-commands.html"><strong aria-hidden="true">1.1.</strong> Commands</a></li><li class="chapter-item expanded "><a href="../00-intro/02-options.html" class="active"><strong aria-hidden="true">1.2.</strong> Options</a></li></ol></li><li class="chapter-item expanded "><a href="../01-templates/00-templates.html"><strong aria-hidden="true">2.</strong> Templates</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="../01-templates/01-an-example-template.html"><strong aria-hidden="true">2.1.</strong> An Example Template</a></li><li class="chapter-item expanded "><a href="../01-templates/02-00-configuration.html"><strong aria-hidden="true">2.2.</strong> Configuration</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="../01-templates/02-01-template-groups.html"><strong aria-hidden="true">2.2.1.</strong> Template Groups</a></li><li class="chapter-item expanded "><a href="../01-templates/02-02-context-modes.html"><strong aria-hidden="true">2.2.2.</strong> Context Modes</a></li><li class="chapter-item expanded "><a href="../01-templates/02-03-structure-modes.html"><strong aria-hidden="true">2.2.3.</strong> Structure Modes</a></li><li class="chapter-item expanded "><a href="../01-templates/02-04-file-extensions.html"><strong aria-hidden="true">2.2.4.</strong> File Extensions</a></li><li class="chapter-item expanded "><a href="../01-templates/02-05-name-templates.html"><strong aria-hidden="true">2.2.5.</strong> Name Templates</a></li></ol></li><li class="chapter-item expanded "><a href="../01-templates/03-partial-templates.html"><strong aria-hidden="true">2.3.</strong> Partial Templates</a></li><li class="chapter-item expanded "><a href="../01-templates/04-backlinks.html"><strong aria-hidden="true">2.4.</strong> Backlinks</a></li><li class="chapter-item expanded "><a href="../01-templates/05-string-sanitization.html"><strong aria-hidden="true">2.5.</strong> String Sanitization</a></li><li class="chapter-item expanded "><a href="../01-templates/06-00-context-reference.html"><strong aria-hidden="true">2.6.</strong> Context Reference</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="../01-templates/06-01-book.html"><strong aria-hidden="true">2.6.1.</strong> Book</a></li><li class="chapter-item expanded "><a href="../01-templates/06-02-annotation.html"><strong aria-hidden="true">2.6.2.</strong> Annotation</a></li><li class="chapter-item expanded "><a href="../01-templates/06-03-links.html"><strong aria-hidden="true">2.6.3.</strong> Links</a></li></ol></li></ol></li><li class="chapter-item expanded "><a href="../02-apple-books/00-apple-books.html"><strong aria-hidden="true">3.</strong> Apple Books</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="../02-apple-books/01-archive-library.html"><strong aria-hidden="true">3.1.</strong> Archive Library</a></li><li class="chapter-item expanded "><a href="../02-apple-books/02-restore-library.html"><strong aria-hidden="true">3.2.</strong> Restore Library</a></li></ol></li></ol>
+                <ol class="chapter"><li class="chapter-item expanded "><a href="../00-intro/00-intro.html"><strong aria-hidden="true">1.</strong> Introduction</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="../00-intro/01-commands.html"><strong aria-hidden="true">1.1.</strong> Commands</a></li><li class="chapter-item expanded "><a href="../00-intro/02-options.html" class="active"><strong aria-hidden="true">1.2.</strong> Options</a></li></ol></li><li class="chapter-item expanded "><a href="../01-templates/00-templates.html"><strong aria-hidden="true">2.</strong> Templates</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="../01-templates/01-an-example-template.html"><strong aria-hidden="true">2.1.</strong> An Example Template</a></li><li class="chapter-item expanded "><a href="../01-templates/02-00-configuration.html"><strong aria-hidden="true">2.2.</strong> Configuration</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="../01-templates/02-01-template-groups.html"><strong aria-hidden="true">2.2.1.</strong> Template Groups</a></li><li class="chapter-item expanded "><a href="../01-templates/02-02-context-modes.html"><strong aria-hidden="true">2.2.2.</strong> Context Modes</a></li><li class="chapter-item expanded "><a href="../01-templates/02-03-structure-modes.html"><strong aria-hidden="true">2.2.3.</strong> Structure Modes</a></li><li class="chapter-item expanded "><a href="../01-templates/02-04-file-extensions.html"><strong aria-hidden="true">2.2.4.</strong> File Extensions</a></li><li class="chapter-item expanded "><a href="../01-templates/02-05-names.html"><strong aria-hidden="true">2.2.5.</strong> Names</a></li></ol></li><li class="chapter-item expanded "><a href="../01-templates/03-partial-templates.html"><strong aria-hidden="true">2.3.</strong> Partial Templates</a></li><li class="chapter-item expanded "><a href="../01-templates/04-backlinks.html"><strong aria-hidden="true">2.4.</strong> Backlinks</a></li><li class="chapter-item expanded "><a href="../01-templates/05-string-sanitization.html"><strong aria-hidden="true">2.5.</strong> String Sanitization</a></li><li class="chapter-item expanded "><a href="../01-templates/06-00-context-reference.html"><strong aria-hidden="true">2.6.</strong> Context Reference</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="../01-templates/06-01-book.html"><strong aria-hidden="true">2.6.1.</strong> Book</a></li><li class="chapter-item expanded "><a href="../01-templates/06-02-annotation.html"><strong aria-hidden="true">2.6.2.</strong> Annotation</a></li><li class="chapter-item expanded "><a href="../01-templates/06-03-names.html"><strong aria-hidden="true">2.6.3.</strong> Names</a></li></ol></li></ol></li><li class="chapter-item expanded "><a href="../02-apple-books/00-apple-books.html"><strong aria-hidden="true">3.</strong> Apple Books</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="../02-apple-books/01-archive-library.html"><strong aria-hidden="true">3.1.</strong> Archive Library</a></li><li class="chapter-item expanded "><a href="../02-apple-books/02-restore-library.html"><strong aria-hidden="true">3.2.</strong> Restore Library</a></li></ol></li></ol>
             </div>
             <div id="sidebar-resize-handle" class="sidebar-resize-handle"></div>
         </nav>
@@ -84,7 +89,7 @@
         <div id="page-wrapper" class="page-wrapper">
 
             <div class="page">
-                <div id="menu-bar-hover-placeholder"></div>
+                                <div id="menu-bar-hover-placeholder"></div>
                 <div id="menu-bar" class="menu-bar sticky bordered">
                     <div class="left-buttons">
                         <button id="sidebar-toggle" class="icon-button" type="button" title="Toggle Table of Contents" aria-label="Toggle Table of Contents" aria-controls="sidebar">
@@ -98,7 +103,7 @@
                             <li role="none"><button role="menuitem" class="theme" id="rust">Rust</button></li>
                             <li role="none"><button role="menuitem" class="theme" id="coal">Coal</button></li>
                             <li role="none"><button role="menuitem" class="theme" id="navy">Navy</button></li>
-                            <li role="none"><button role="menuitem" class="theme" id="ayu">Ayu (default)</button></li>
+                            <li role="none"><button role="menuitem" class="theme" id="ayu">Ayu</button></li>
                         </ul>
                         <button id="search-toggle" class="icon-button" type="button" title="Search. (Shortkey: s)" aria-label="Toggle Searchbar" aria-expanded="false" aria-keyshortcuts="S" aria-controls="searchbar">
                             <i class="fa fa-search"></i>
@@ -117,6 +122,7 @@
                         <a href="https://github.com/tnahs/readstor/edit/main/book/src/00-intro/02-options.md" title="Suggest an edit" aria-label="Suggest an edit">
                             <i id="git-edit-button" class="fa fa-edit"></i>
                         </a>
+
                     </div>
                 </div>
 
@@ -130,8 +136,9 @@
                         </ul>
                     </div>
                 </div>
+
                 <!-- Apply ARIA attributes after the sidebar and the sidebar toggle button are added to the DOM -->
-                <script type="text/javascript">
+                <script>
                     document.getElementById('sidebar-toggle').setAttribute('aria-expanded', sidebar === 'visible');
                     document.getElementById('sidebar').setAttribute('aria-hidden', sidebar !== 'visible');
                     Array.from(document.querySelectorAll('#sidebar a')).forEach(function(link) {
@@ -147,7 +154,7 @@
 <p>Set the output directory for all <a href="./01-commands.html">Commands</a>. Defaults to <code>~/.readstor</code>.</p>
 <h3 id="--databases-directory-path"><a class="header" href="#--databases-directory-path"><code>--databases-directory &lt;PATH&gt;</code></a></h3>
 <p>Set a custom databases directory.</p>
-<p>This can be useful when running ReadStor on on databases backed-up with the
+<p>This can be useful when running ReadStor on databases backed-up with the
 <a href="./01-commands.html#backup"><code>backup</code></a> command. The output structure the <a href="./01-commands.html#backup"><code>backup</code></a> command
 creates is identical to the required databases directory structure.</p>
 <p>The databases directory should contain the following structure:</p>
@@ -186,14 +193,6 @@ syntax.</p>
     --template-group using-backlinks
     # ..
 </code></pre>
-<h3 id="--trim-blocks"><a class="header" href="#--trim-blocks"><code>--trim-blocks</code></a></h3>
-<p>Trim any blocks left after rendering.</p>
-<blockquote>
-<p><i class="fa fa-exclamation-circle"></i> Currently this is a <em>very</em> naive
-implementation that mimics what <a href="https://docs.rs/tera/latest/tera/"><code>tera</code></a> might do if/when it adds
-<a href="https://github.com/Keats/tera/issues/637"><code>trim_blocks</code></a>. It is by no means smart and will just normalize
-whitespace regardless of what the template requested.</p>
-</blockquote>
 <h2 id="pre-process-options"><a class="header" href="#pre-process-options">Pre-process Options</a></h2>
 <h3 id="--extract-tags"><a class="header" href="#--extract-tags"><code>--extract-tags</code></a></h3>
 <p>Extract <code>#tags</code> from <a href="../01-templates/06-02-annotation.html"><code>annotation.notes</code></a>.</p>
@@ -206,7 +205,7 @@ compiled and placed them into <a href="../01-templates/06-01-book.html"><code>bo
 </blockquote>
 <h3 id="--normalize-whitespace"><a class="header" href="#--normalize-whitespace"><code>--normalize-whitespace</code></a></h3>
 <p>Normalize whitespace in <a href="../01-templates/06-02-annotation.html"><code>annotation.body</code></a>.</p>
-<p>Trims whitespace and replaces all linebreaks with two consecutive linebreaks:
+<p>Trims whitespace and replaces all line-breaks with two consecutive line-breaks:
 <code>\n\n</code>.</p>
 <h3 id="--ascii-all"><a class="header" href="#--ascii-all"><code>--ascii-all</code></a></h3>
 <p>Convert all Unicode characters to ASCII.</p>
@@ -233,6 +232,26 @@ and <a href="../01-templates/06-02-annotation.html"><code>annotation.body</code>
 <li><a href="https://daringfireball.net/projects/smartypants/">Daring Fireball - SmartyPants</a></li>
 <li><a href="https://python-markdown.github.io/extensions/smarty/">Python-Markdown - SmartyPants</a></li>
 </ul>
+<h2 id="post-process-options"><a class="header" href="#post-process-options">Post-process Options</a></h2>
+<h3 id="--trim-blocks"><a class="header" href="#--trim-blocks"><code>--trim-blocks</code></a></h3>
+<p>Trim any blocks left after rendering.</p>
+<blockquote>
+<p><i class="fa fa-exclamation-circle"></i> Currently, this is a <em>very</em> naive
+implementation that mimics what <a href="https://docs.rs/tera/latest/tera/"><code>tera</code></a> might do if/when it adds
+<a href="https://github.com/Keats/tera/issues/637"><code>trim_blocks</code></a>. It is by no means smart and will just normalize
+whitespace regardless of what the template requested.</p>
+</blockquote>
+<h3 id="--wrap-text"><a class="header" href="#--wrap-text"><code>--wrap-text</code></a></h3>
+<p>Wrap text to a maximum character width.</p>
+<p>Maximum line length is not guaranteed as long words are not broken if their
+length exceeds the maximum. Hyphenation is not used, however, existing hyphen
+can be split on to insert a line-break.</p>
+<blockquote>
+<p><i class="fa fa-exclamation-circle"></i> This will naively wrap all the
+text inside a rendered file regardless its structure. Use with caution!
+Extremely low values may cause unexpected results. Values above <code>80</code> or so
+are recommended.</p>
+</blockquote>
 
                     </main>
 
@@ -241,9 +260,11 @@ and <a href="../01-templates/06-02-annotation.html"><code>annotation.body</code>
                             <a rel="prev" href="../00-intro/01-commands.html" class="mobile-nav-chapters previous" title="Previous chapter" aria-label="Previous chapter" aria-keyshortcuts="Left">
                                 <i class="fa fa-angle-left"></i>
                             </a>
+
                             <a rel="next" href="../01-templates/00-templates.html" class="mobile-nav-chapters next" title="Next chapter" aria-label="Next chapter" aria-keyshortcuts="Right">
                                 <i class="fa fa-angle-right"></i>
                             </a>
+
                         <div style="clear: both"></div>
                     </nav>
                 </div>
@@ -253,6 +274,7 @@ and <a href="../01-templates/06-02-annotation.html"><code>annotation.body</code>
                     <a rel="prev" href="../00-intro/01-commands.html" class="nav-chapters previous" title="Previous chapter" aria-label="Previous chapter" aria-keyshortcuts="Left">
                         <i class="fa fa-angle-left"></i>
                     </a>
+
                     <a rel="next" href="../01-templates/00-templates.html" class="nav-chapters next" title="Next chapter" aria-label="Next chapter" aria-keyshortcuts="Right">
                         <i class="fa fa-angle-right"></i>
                     </a>
@@ -260,16 +282,24 @@ and <a href="../01-templates/06-02-annotation.html"><code>annotation.body</code>
 
         </div>
 
-        <script type="text/javascript">
+
+
+
+        <script>
             window.playground_copyable = true;
         </script>
-        <script src="../elasticlunr.min.js" type="text/javascript" charset="utf-8"></script>
-        <script src="../mark.min.js" type="text/javascript" charset="utf-8"></script>
-        <script src="../searcher.js" type="text/javascript" charset="utf-8"></script>
-        <script src="../clipboard.min.js" type="text/javascript" charset="utf-8"></script>
-        <script src="../highlight.js" type="text/javascript" charset="utf-8"></script>
-        <script src="../book.js" type="text/javascript" charset="utf-8"></script>
+
+
+        <script src="../elasticlunr.min.js"></script>
+        <script src="../mark.min.js"></script>
+        <script src="../searcher.js"></script>
+
+        <script src="../clipboard.min.js"></script>
+        <script src="../highlight.js"></script>
+        <script src="../book.js"></script>
 
         <!-- Custom JS scripts -->
+
+
     </body>
 </html>
