deploy: ac36c31fdfbddc31fea1b587889f8ba5379db5e1

--- a/dev/01-templates/06-02-annotation.html
+++ b/dev/01-templates/06-02-annotation.html
@@ -170,9 +170,10 @@ objects, under the name <code>annotations</code>, are injected into the template
 <tr><td><code>annotation.metadata.modified</code></td><td>datetime</td><td>date modified</td></tr>
 <tr><td><code>annotation.metadata.location</code></td><td>string</td><td>location string</td></tr>
 <tr><td><code>annotation.metadata.epubcfi</code></td><td>string</td><td><a href="https://w3c.github.io/epub-specs/epub33/epubcfi/">epubcfi</a></td></tr>
-<tr><td><code>annotation.metadata.slugs</code></td><td>dictionary</td><td>slugs object</td></tr>
-<tr><td><code>annotation.metadata.slugs.created</code></td><td>string</td><td>date created slugified</td></tr>
-<tr><td><code>annotation.metadata.slugs.modified</code></td><td>string</td><td>date modified slugified</td></tr>
+<tr><td><code>annotation.slugs</code></td><td>dictionary</td><td>slugs object</td></tr>
+<tr><td><code>annotation.slugs.metadata</code></td><td>dictionary</td><td>slugs metadata object</td></tr>
+<tr><td><code>annotation.slugs.metadata.created</code></td><td>string</td><td>date created slugified</td></tr>
+<tr><td><code>annotation.slugs.metadata.modified</code></td><td>string</td><td>date modified slugified</td></tr>
 </tbody></table>
 </div>
 <h2 id="example-data---annotation"><a class="header" href="#example-data---annotation">Example Data - Annotation</a></h2>
