--- a/dev/01-templates/06-01-book.html
+++ b/dev/01-templates/06-01-book.html
@@ -163,6 +163,8 @@ the template's <a href="./02-02-context-modes.html">Context Mode</a>.</p>
 <tr><td><code>book.slugs</code></td><td>dictionary</td><td>slugs object</td></tr>
 <tr><td><code>book.slugs.title</code></td><td>string</td><td>title slugified</td></tr>
 <tr><td><code>book.slugs.author</code></td><td>string</td><td>author slugified</td></tr>
+<tr><td><code>book.slugs.metadata.last_opened</code></td><td>datetime</td><td>slugs metadata object</td></tr>
+<tr><td><code>book.slugs.metadata.last_opened</code></td><td>datetime</td><td>date last opened slugified</td></tr>
 </tbody></table>
 </div>
 <h2 id="example-data---book"><a class="header" href="#example-data---book">Example Data - Book</a></h2>
