--- a/dev/print.html
+++ b/dev/print.html
@@ -1582,6 +1582,8 @@ the template's <a href="01-templates/./02-02-context-modes.html">Context Mode</a
 <tr><td><code>book.slugs</code></td><td>dictionary</td><td>slugs object</td></tr>
 <tr><td><code>book.slugs.title</code></td><td>string</td><td>title slugified</td></tr>
 <tr><td><code>book.slugs.author</code></td><td>string</td><td>author slugified</td></tr>
+<tr><td><code>book.slugs.metadata.last_opened</code></td><td>datetime</td><td>slugs metadata object</td></tr>
+<tr><td><code>book.slugs.metadata.last_opened</code></td><td>datetime</td><td>date last opened slugified</td></tr>
 </tbody></table>
 </div>
 <h2 id="example-data---book"><a class="header" href="#example-data---book">Example Data - Book</a></h2>
@@ -1634,9 +1636,10 @@ objects, under the name <code>annotations</code>, are injected into the template
 <tr><td><code>annotation.metadata.modified</code></td><td>datetime</td><td>date modified</td></tr>
 <tr><td><code>annotation.metadata.location</code></td><td>string</td><td>location string</td></tr>
 <tr><td><code>annotation.metadata.epubcfi</code></td><td>string</td><td><a href="https://w3c.github.io/epub-specs/epub33/epubcfi/">epubcfi</a></td></tr>
-<tr><td><code>annotation.metadata.slugs</code></td><td>dictionary</td><td>slugs object</td></tr>
-<tr><td><code>annotation.metadata.slugs.created</code></td><td>string</td><td>date created slugified</td></tr>
-<tr><td><code>annotation.metadata.slugs.modified</code></td><td>string</td><td>date modified slugified</td></tr>
+<tr><td><code>annotation.slugs</code></td><td>dictionary</td><td>slugs object</td></tr>
+<tr><td><code>annotation.slugs.metadata</code></td><td>dictionary</td><td>slugs metadata object</td></tr>
+<tr><td><code>annotation.slugs.metadata.created</code></td><td>string</td><td>date created slugified</td></tr>
+<tr><td><code>annotation.slugs.metadata.modified</code></td><td>string</td><td>date modified slugified</td></tr>
 </tbody></table>
 </div>
 <h2 id="example-data---annotation"><a class="header" href="#example-data---annotation">Example Data - Annotation</a></h2>
